--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: csharp
 mono: none
 dotnet: 2.1.301
 before_script:
-  - chmod a+x ./travis-build.sh
+  - chmod a+x travis-build.sh
 script:
- - ./travis-build.sh
+ - travis-build.sh
 deploy:
    provider: cloudfoundry
    username: jhonatantiradotiradodeep@gmail.com
